2008-11-01  Donal K. Fellows  <dkf@donal-k-fellowss-macbook-pro.local>

	* generic/tclOOBasic.c (TclOONRUpcatch): Reworked the code that does
	* generic/tclOO.c (InitFoundation):	 class constructor handling so
	that it is more robust and runs the constructor call in the context of
	the caller of the class's constructor method. Needed because the
	previously used code did not work at all after applying the fix below;
	no Tcl existing command could reliably do what was needed any more.

	* generic/tclOODefineCmds.c (GetClassInOuterContext): Rework and
	factor out the code to resolve class names in definitions so that
	classes are resolved from the perspective of the caller of the
	[oo::define] command, rather than from the oo::define namespace! This
	makes much code simpler by reducing how often fully-qualified names
	are required (previously always in practice, so no back-compat issues
	exist). [Bug 2200824]

2008-10-14  Donal K. Fellows  <dkf@users.sf.net>

	=== RELEASE OF TCLOO VERSION 0.6 ===

	* configure.in, README.txt, win/TclOO.rc: Bump version.
	* generic/tclOO.h (TCLOO_VERSION):

	Various minor fixes (ported from Tcl HEAD) to prepare for 0.6 release.
	* generic/tclOO.c (Tcl_ObjectContextInvokeNext): Added gracefulness in
	the face of interpreters being deleted.
	* generic/tclOO.c (InitFoundation):	Use INT2PTR/PTR2INT macros
	* generic/tclOODefineCmds.c (many):	instead of somewhat dodgy
	* generic/tclOOCall.c (TclOOGetSortedMethodList): casts.
	(TclOOGetSortedClassMethodList):
	* generic/tclOOBasic.c (TclOOSelfObjCmd): Clean up of code of [self]
	command to use names from Foundation. Don't write directly to the
	interpreter result object.
	(TclOO_Object_LinkVar): Application of the "do nothing gracefully"
	principle.
	* generic/tclOOInfo.c (various): Don't write directly to the
	interpreter result object.

	* generic/tclOOInt.h: Added macro magic to make things work with
	Objective C. [Bug 2163447]

2008-10-10  Donal K. Fellows  <dkf@users.sf.net>
