@@ -1,3 +1,8 @@
+2009-01-06  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOO.c (Tcl_NewObjectInstance): Perform search for existing
+	commands in right context. [Bug 2481109]
+
 2008-11-01  Donal K. Fellows  <dkf@donal-k-fellowss-macbook-pro.local>
 
 	* generic/tclOOBasic.c (TclOONRUpcatch): Reworked the code that does
